--- a/index.html
+++ b/index.html
@@ -498,6 +498,9 @@
       </div>
     </div>
 
+    <!-- toast -->
+    <div id="toast" class="toast">Message sent successfully!</div>
+
     <!-- JS script, will learn later -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script
@@ -520,6 +523,7 @@
         backDelay: 1000,
       });
     </script>
+
     <!-- email js -->
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
     <script>
@@ -535,14 +539,26 @@
 
           emailjs.sendForm("service_ypljs6t", "template_lzc4yyw", this).then(
             function () {
-              alert("Message sent successfully!");
+              showToast("Message sent successfully!");
               document.getElementById("contact-form").reset();
             },
             function (error) {
-              alert("Oops... something went wrong: " + JSON.stringify(error));
+              showToast("Oops! Something went wrong.");
             }
           );
         });
+    </script>
+
+    <!-- toast -->
+    <script>
+      function showToast(message) {
+        const toast = document.getElementById("toast");
+        toast.textContent = message;
+        toast.classList.add("show");
+        setTimeout(() => {
+          toast.classList.remove("show");
+        }, 3000); // hides after 3 seconds
+      }
     </script>
   </body>
 </html>
